# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2020-09-19 Michael Truog   <mjtruog at protonmail dot com>

    * Improve cloudi_crdt comments

2020-09-18 Michael Truog   <mjtruog at protonmail dot com>

    * Add the cloudi_service_cron configuration argument
      request_info_default for simplifying send_args_info use

2020-09-17 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_cron expressions arguments features:
        * send_args_info to transform a list of string key/value tuples
          provided as the RequestInfo with data specific to the
          cron expression's event as text_pairs data
        * send_mcast to send each event using mcast_async
    * Add cloudi_service_shell interpretation of RequestInfo data
      as text_pairs info logged as shell comments to describe the Request
    * Change cloudi_string:term_to_binary_compact/1 and
      cloudi_string:term_to_list_compact/1 to output unicode
    * Update jsx

2020-09-06 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_funnel for providing coordination
      among duplicate service requests that receive a single response
    * Add the cloudi_crdt functions events_subscriptions/3,
      events_clear/2, update_clear/5, update_clear/6,
      update_clear_id/6, update_clear_id/7
    * Add the cloudi_crdt:new/2 argument initial_data_function

2020-09-04 Michael Truog   <mjtruog at protonmail dot com>

    * Update cpg

2020-08-29 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_http_cowboy1 and cloudi_service_http_elli
      configuration arguments
      content_security_policy, content_security_policy_report_only,
      set_x_xss_protection, set_x_content_type_options
      (for automatically setting the HTTP response header fields
       if they were not already set in the service request response)
    * Update elli

2020-08-17 Michael Truog   <mjtruog at protonmail dot com>
