@@ -221,14 +221,18 @@
      {module, cloudi_service_shell},
      {dest_refresh, none},
      {count_process, 4}],
+    [{module, cloudi_service_funnel},
+     {args, [{name, "funnel"}]},
+     {count_process, 4}],
     [{module, cloudi_service_cron},
      {args,
       [{expressions,
         [{"0 */1 * * * * *",
           [{send_args,
-            ["/shell", default,
+            ["/funnel/shell", default,
              "echo \"Hello World! The time is \"`date`\".\"",
              undefined, undefined]},
+           {send_mcast, true},
            {send_args_info, true}]}]}]},
      {count_process, 4}],
     [{prefix, "*"},
@@ -315,12 +319,6 @@
         % quickly as possible to allow it to retry
         [{request_timeout_immediate_max, limit_min},
          {response_timeout_immediate_max, limit_min}]},
-    {internal,
-        "/",
-        cloudi_service_funnel,
-        [{name, "funnel"}],
-        immediate_closest,
-        5000, 5000, 5000, undefined, undefined, 4, 5, 300, []},
     {internal,
         "/byzantine",
         cloudi_service_quorum,
