@@ -1,6 +1,11 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2020-09-21 Michael Truog   <mjtruog at protonmail dot com>
+
+    * Fix cloudi_service_funnel handling of concurrent duplicate requests
+    * Improve cloudi_crdt comments
+
 2020-09-19 Michael Truog   <mjtruog at protonmail dot com>
 
     * Improve cloudi_crdt comments
